# wordle-bot-rs

./: .gitignore  Cargo.toml  README.md
src/: feedback.rs  help.txt  lib.rs  main.rs  solver.rs
src/text/: banner.txt  usage.txt
tests/: feedback_tests.rs  solver_tests.rs
